Fix dotted/dashed borders adjacent to thick

A previous change switched to using the draw_thickness for dash and dot
size calculations, rather then the thickness. But the draw_thickness
is the max of the edge in question and its adjacent edges. So a thin
edge bordering a thick edge would have oversized dots and dashes.

This patch switches to sizing the dots and dashes based on the edge
thickness alone.

R=pdr@chromium.org
BUG=739228

Cq-Include-Trybots: master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: Ie3bdd1409405fcb6e4cd7e924832620eb7b96076
Reviewed-on: https://chromium-review.googlesource.com/588407
Commit-Queue: Stephen Chenney <schenney@chromium.org>
Reviewed-by: Philip Rogers <pdr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#490220}
Former-commit-id: aa5101c8859a5979c9ee4d61a62079b06f6226e9